load("@rules_go//docs/go/core:rules.bzl", "go_binary", "go_library", "go_test")
load("@rules_go//docs/go/core:rules.bzl", "go_path", "go_source")

dep1 = "@org_golang_x_net//html"

go_library(
    name = "basic_gazelle_lib",
    srcs = ["printlinks.go"],
    importpath = "github.com/bazel-contrib/rules_go/examples/basic_gazelle",
    visibility = ["//visibility:private"],
    deps = [
        dep1,
        "@org_golang_x_net//html/atom",
    ],
)

go_binary(
    name = "basic_gazelle",
    embed = [":basic_gazelle_lib"],
    visibility = ["//visibility:public"],
)

go_test(
    name = "basic_gazelle_test",
    srcs = ["printlinks_test.go"],
    embed = [":basic_gazelle_lib"],
    deps = [
        "@com_github_google_go_cmp//cmp",
    ],
)

go_source(
    name = "my_source",
    srcs = ["main.go"],
    deps = [
        "@org_golang_x_text//language",
    ],
)

go_path(
    name = "my_gopath",
    deps = [
        "@org_golang_x_crypto//ssh",
    ],
)
