[project]
name = "my-project"
version = "1.2.3"
dependencies = [
  "requests~=2.25.1", # This is a comment
  "numpy==1.22.0",
  "django>2.1,<3.0; os_name != 'nt'",
  "django>2.0,<3.0; os_name == 'nt'"
]

# Optional dependencies
[project.optional-dependencies]
dev = ["pytest>=6.2.5", "black==22.3.0"] # Another comment

[tool.poetry]
python = "^3.9"
